2005-04-16  Philippe Gerum  <rpm@xenomai.org>

	* arch/generic/hal: Rename "sysreq" support to APC
	(i.e. Asynchronous Procedure Call), so that we stop conflicting
	uselessly with Linux's (totally unrelated) sysrq feature.  Also
	globally revamp all HAL service names to get more consistent with
	upper layers.

	* include/nucleus/asm-i386/hal.h: Revert last change and make sure
	we _never_ program the local APIC with a null delay: this
	definitely breaks with many APIC timers, stopping the countdown
	instead of causing an interrupt to be triggered immediately.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r7c1.

2005-04-15  Philippe Gerum  <rpm@xenomai.org>

	* arch/generic/hal (generic.c):
	* include/nucleus/asm-generic (hal.h, system.h): Allow
	arch-level code do share arch-independent bits.

	* nucleus/shadow.c (linux_schedule_tail): No more need to
	interpose on the SCHEDULE_TAIL event since Adeos will truncate the
	scheduling tail as required starting with r10c3/x86 and r7c1/ppc.

2005-04-14  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c (rthal_sysreq_handler): Make the pending srq
	bitmap a per-CPU variable so that affinity is kept with the
	poster's CPU.

2005-04-13  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/registry.c: Fix /proc export handler for PREEMPT_RT.

2005-04-13  Jim Cromie <jcromie@divsol.com>

	* scripts/rtai-test: Properly stop workload procs upon exit and
	allow for user-defined workloads.

2005-04-12  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/timer.c (xntimer_next_local_shot): Pessimistically
	substract nktimerlat from delay before programming next shot.

	* include/nucleus/timer.h, nucleus/timer.c: Eliminate
	xntimer_sched and xntimer_set_sched as much as possible at
	compile-time.

	* include/nucleus/asm-i386/hal.h: Allow programming local APIC
	with null delay.

2005-04-12  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/hal/hal.c: Add the required kernel thread support for