@@ -1,3 +1,3 @@
 includedir = $(prefix)/include/nucleus/asm-generic
 
-include_HEADERS = hal.h system.h
+include_HEADERS = hal.h system.h syscall.h
